--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ vdr-plugin-skindesigner-0.7.2.tar.bz2
 vdr-plugin-skindesigner-0.8.0.tar.bz2
 vdr-skindesigner-0.8.0-makefile.patch
 vdr-skindesigner-0.8.0-svdrp.patch
+vdr-plugin-skindesigner-0.8.1.tar.bz2
