--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ vdr-plugin-skindesigner-0.7.2.tar.bz2
 vdr-plugin-skindesigner-0.8.0.tar.bz2
 vdr-plugin-skindesigner-0.8.1.tar.bz2
 vdr-plugin-skindesigner-0.8.2.tar.bz2
+vdr-plugin-skindesigner-0.8.3.tar.bz2
