--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ vdr-plugin-skindesigner-0.8.0.tar.bz2
 vdr-plugin-skindesigner-0.8.1.tar.bz2
 vdr-plugin-skindesigner-0.8.2.tar.bz2
 vdr-plugin-skindesigner-0.8.3.tar.bz2
+vdr-plugin-skindesigner-0.8.4.tar.bz2
