--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ vdr-plugin-skindesigner-0.8.1.tar.bz2
 vdr-plugin-skindesigner-0.8.2.tar.bz2
 vdr-plugin-skindesigner-0.8.3.tar.bz2
 vdr-plugin-skindesigner-0.8.4.tar.bz2
+vdr-plugin-skindesigner-0.8.5.tar.bz2
