--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ vdr-plugin-skindesigner-0.8.5.tar.bz2
 vdr-plugin-skindesigner-0.8.6.tar.bz2
 vdr-plugin-skindesigner-0.9.1.tar.bz2
 vdr-plugin-skindesigner-0.9.3.tar.bz2
+vdr-plugin-skindesigner-0.9.5.tar.bz2
