--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ vdr-plugin-skindesigner-0.9.1.tar.bz2
 vdr-plugin-skindesigner-0.9.3.tar.bz2
 vdr-plugin-skindesigner-0.9.5.tar.bz2
 /vdr-plugin-skindesigner-1.1.5.tar.bz2
+/vdr-plugin-skindesigner-1.2.0.tar.bz2
