--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ vdr-plugin-skindesigner-0.9.5.tar.bz2
 /vdr-plugin-skindesigner-1.2.0.tar.bz2
 /vdr-plugin-skindesigner-1.2.1.tar.bz2
 /vdr-plugin-skindesigner-1.2.2.tar.bz2
+/vdr-plugin-skindesigner-1.2.3.tar.bz2
