--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ vdr-plugin-skindesigner-0.9.5.tar.bz2
 /vdr-plugin-skindesigner-1.2.6.tar.bz2
 /vdr-plugin-skindesigner-1.2.7.tar.bz2
 /skindesigner.diff.gz
+/vdr-plugin-skindesigner-1.2.8.tar.bz2
