--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ vdr-plugin-skindesigner-0.9.5.tar.bz2
 /skindesigner.diff.gz
 /vdr-plugin-skindesigner-1.2.8.tar.bz2
 /vdr-plugin-skindesigner-1.2.8.1.tar.bz2
+/vdr-plugin-skindesigner-1.2.8.2.tar.bz2
