--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ vdr-plugin-skindesigner-0.9.5.tar.bz2
 /vdr-plugin-skindesigner-1.2.8.2.tar.bz2
 /vdr-plugin-skindesigner-1.2.8.4.tar.bz2
 /vdr-plugin-skindesigner-1.2.8.5.tar.bz2
+/vdr-plugin-skindesigner-1.2.8.6.tar.bz2
