--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ vdr-plugin-skindesigner-0.9.5.tar.bz2
 /vdr-plugin-skindesigner-1.2.8.4.tar.bz2
 /vdr-plugin-skindesigner-1.2.8.5.tar.bz2
 /vdr-plugin-skindesigner-1.2.8.6.tar.bz2
+/vdr-plugin-skindesigner-1.2.9.tar.bz2
