--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ vdr-plugin-skindesigner-0.9.5.tar.bz2
 /vdr-plugin-skindesigner-1.2.10.tar.bz2
 /vdr-plugin-skindesigner-1.2.11.tar.bz2
 /vdr-plugin-skindesigner-1.2.12.tar.bz2
+/vdr-plugin-skindesigner-1.2.13.tar.bz2
