--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ vdr-plugin-skindesigner-0.9.5.tar.bz2
 /vdr-plugin-skindesigner-1.2.12.tar.bz2
 /vdr-plugin-skindesigner-1.2.13.tar.bz2
 /vdr-plugin-skindesigner-1.2.14.tar.bz2
+/vdr-plugin-skindesigner-1.2.15.tar.bz2
