--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ vdr-plugin-skindesigner-0.9.5.tar.bz2
 /vdr-plugin-skindesigner-1.2.14.tar.bz2
 /vdr-plugin-skindesigner-1.2.15.tar.bz2
 /vdr-plugin-skindesigner-1.2.16.tar.bz2
+/vdr-plugin-skindesigner-1.2.17.tar.bz2
