--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ vdr-plugin-skindesigner-0.9.5.tar.bz2
 /vdr-plugin-skindesigner-1.2.16.tar.bz2
 /vdr-plugin-skindesigner-1.2.17.tar.bz2
 /vdr-plugin-skindesigner-1.2.18.tar.bz2
+/skindesigner-1.2.18.tar.bz2
