--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ vdr-plugin-skindesigner-0.9.5.tar.bz2
 /vdr-plugin-skindesigner-1.2.17.tar.bz2
 /vdr-plugin-skindesigner-1.2.18.tar.bz2
 /skindesigner-1.2.18.tar.bz2
+/skindesigner-1.2.19.tar.bz2
