--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ vdr-plugin-skindesigner-0.9.5.tar.bz2
 /skindesigner-1.2.18.tar.bz2
 /skindesigner-1.2.19.tar.bz2
 /skindesigner-1.2.20.tar.bz2
+/skindesigner-1.2.21.tar.bz2
