--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ vdr-plugin-skindesigner-0.9.5.tar.bz2
 /vdr-skindesigner-71b3e51.tar.gz
 /skindesigner-1.2.23.tar.bz2
 /skindesigner-1.2.24.tar.bz2
+/skindesigner-1.2.25.tar.bz2
