--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ vdr-plugin-skindesigner-0.9.5.tar.bz2
 /skindesigner-1.2.23.tar.bz2
 /skindesigner-1.2.24.tar.bz2
 /skindesigner-1.2.25.tar.bz2
+/skindesigner-1.2.26.tar.bz2
